[package]
name = "get-ffmpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
indicatif = "0.17.3"
ureq = { version = "2.5.0", features = ["json"] }
winreg = "0.10.1"
zip = "0.6.4"
